Updated in-page links

--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
               <a class="nav-link" aria-current="page" href="#">Home</a>
               <!-- <a class="nav-link" href="#">Features</a> -->
               <a class="nav-link" href="#">Register</a>
-              <a class="nav-link" href="#">Downloads</a>
-              <a class="nav-link" href="#">Contact Us</a>
+              <a class="nav-link" href="#features">Features</a>
+              <a class="nav-link" href="#contact">Contact Us</a>
             </div>
           </div>
         </div>
@@ -32,10 +32,9 @@
 
       <div class="p-5 banner mb-4 bg-light rounded-3">
         <div class="ms-auto container py-5">
-          <h1 class="display-6 fw-bold">Cloud-based BIM Project Issue Collaboration Platform</h1>
-          
-          <button class="btn btn-primary btn-lg" type="button">See Features</button>
-          <button class="btn btn-primary btn-lg" type="button">Try Now for Free</button>
+          <h1 class="display-6 fw-bold feature-text">Cloud-based BIM Project Issue Collaboration Platform</h1>
+          <a class="btn btn-secondary btn-lg mt-2" href="#features">See Features</a>
+          <a class="btn btn-secondary btn-lg mt-2" href="#">Try Now for Free</a>
         </div>
       </div>
 
@@ -242,7 +241,7 @@
 
     <hr class="my-4 mt-5">
 
-    <div class="container">
+    <section class="container" id="contact">
           <div class="row">
            
             <div class="m-2 col-xs-12 col-sm-12 col-md-8 border shadow-sm bg-light mx-auto">
@@ -295,7 +294,7 @@
               </form>
             </div>
           </div>
-      </div>
+      </section>
 
  
     <!-- Footer -->
