Updated header background image for mobile

--- a/index.html
+++ b/index.html
@@ -22,7 +22,6 @@
           <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav ms-auto">
               <a class="nav-link" aria-current="page" href="#">Home</a>
-              <!-- <a class="nav-link" href="#">Features</a> -->
               <a class="nav-link" href="#features">Features</a>
               <a class="nav-link" href="#register">Register</a>
               <a class="nav-link" href="#contact">Contact Us</a>
@@ -31,7 +30,7 @@
         </div>
       </nav>
 
-      <div class="banner mb-4 bg-light">
+      <div class="banner bg-light position-relative">
         <div class="position-absolute top-20 start-50 translate-middle">
             
           <h1 class="text-center feature-text">Cloud-based BIM Issue Collaboration Platform</h1>
