--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-light">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#">
+            <a class="navbar-brand" href="index.html">
                 <img src="images/issuelab-icon.png" alt=""  height="40" class="d-inline-block align-text-top">
               </a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
@@ -21,7 +21,6 @@
           </button>
           <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav ms-auto">
-              <a class="nav-link" aria-current="page" href="#">Home</a>
               <a class="nav-link" href="#features">Features</a>
               <a class="nav-link" href="#pricing">Pricing</a>
               <a class="nav-link" href="#register">Register</a>
@@ -384,7 +383,7 @@
     <!-- Footer -->
     <footer class="mt-5 bg-light pt-5 text-muted text-center text-small">
         <ul class="list-inline">
-            <li class="list-inline-item footer-link"><a href="#" class="text-muted">Privacy</a></li>
+            <li class="list-inline-item footer-link"><a href="pages/privacy-policy.html" class="text-muted" >Privacy</a></li>
             <li class="list-inline-item footer-link "><a href="#" class="text-muted" >Terms and Conditions</a></li>
           </ul>
         <p class="pb-3">© 2020–2023 IssueLab</p>
