--- a/pages/privacy-policy.html
+++ b/pages/privacy-policy.html
@@ -275,12 +275,12 @@
 
  
     <!-- Footer -->
-    <footer class="mt-5 bg-light pt-5 text-muted text-center text-small">
+    <footer class="mt-5 bg-light pt-2 text-muted text-center text-small">
         <ul class="list-inline">
-            <li class="list-inline-item footer-link"><a href="#" class="text-muted">Privacy</a></li>
-            <li class="list-inline-item footer-link "><a href="#" class="text-muted" >Terms and Conditions</a></li>
+            <li class="list-inline-item footer-link"><a href="#" class="text-muted">Privacy Policy</a></li>
+            <!-- <li class="list-inline-item footer-link "><a href="#" class="text-muted" >Terms and Conditions</a></li> -->
           </ul>
-        <p class="pb-3">© 2020–2023 IssueLab</p>
+        <p class="pb-3 mb-0">© 2020–2023 IssueLab</p>
        
       </footer>
     <!-- Footer -->
