--- a/pages/privacy-policy.html
+++ b/pages/privacy-policy.html
@@ -277,7 +277,7 @@
     <!-- Footer -->
     <footer class="mt-5 bg-light pt-2 text-muted text-center text-small">
         <ul class="list-inline">
-            <li class="list-inline-item footer-link"><a href="#" class="text-muted">Privacy Policy</a></li>
+            <li class="list-inline-item footer-link"><a href="/pages/privacy-policy.html" class="text-muted">Privacy Policy</a></li>
             <!-- <li class="list-inline-item footer-link "><a href="#" class="text-muted" >Terms and Conditions</a></li> -->
           </ul>
         <p class="pb-3 mb-0">© 2020–2023 IssueLab</p>
