--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-light">
         <div class="container-fluid">
             <a class="navbar-brand" href="index.html">
-                <img src="images/issuelab-icon.png" alt="" height="40" class="d-inline-block align-text-top">
+                <img src="/images/issuelab-icon.png" alt="" height="32" class="d-inline-block align-text-top">
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
                 aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
@@ -408,7 +408,7 @@
     <!-- Footer -->
     <footer class="mt-4 bg-light pt-2 text-muted text-center text-small">
         <ul class="list-inline">
-            <li class="list-inline-item footer-link"><a href="/pages/privacy-policy.html" class="text-muted">Privacy Policy</a></li>
+            <li class="list-inline-item footer-link"><a href="././pages/privacy-policy.html" class="text-muted">Privacy Policy</a></li>
             <!-- <li class="list-inline-item footer-link "><a href="#" class="text-muted" >Terms and Conditions</a></li> -->
         </ul>
         <p class="pb-3 mb-0">© 2020–2023 IssueLab</p>
