--- a/pages/privacy-policy.html
+++ b/pages/privacy-policy.html
@@ -7,25 +7,25 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link href="css/style.css" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" rel="stylesheet">
-    <link rel="icon" href="/images/icon-512.png">
+    <link rel="icon" href="../images/icon-512.png">
     <title>IssueLab</title>
 </head>
 <body>
     <nav class="navbar  navbar-expand-lg navbar-light bg-light">
         <div class="container-fluid">
-            <a class="navbar-brand" href="/index.html">
-                <img src="/images/issuelab-icon.png" alt=""  height="40" class="d-inline-block align-text-top">
+            <a class="navbar-brand" href="../index.html">
+                <img src="../images/issuelab-icon.png" alt=""  height="40" class="d-inline-block align-text-top">
               </a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav ms-auto">
-                <a class="nav-link" href="/index.html">Home</a>
-              <a class="nav-link" href="#features">Features</a>
-              <a class="nav-link" href="#pricing">Pricing</a>
-              <a class="nav-link" href="#register">Register</a>
-              <a class="nav-link" href="#contact">Contact Us</a>
+                <a class="nav-link" href="../index.html">Home</a>
+              <a class="nav-link" href="../index.html#features">Features</a>
+              <a class="nav-link" href="../index.html#pricing">Pricing</a>
+              <a class="nav-link" href="../index.html#register">Register</a>
+              <a class="nav-link" href="../index.html#contact">Contact Us</a>
             </div>
           </div>
         </div>
@@ -277,7 +277,7 @@
     <!-- Footer -->
     <footer class="mt-5 bg-light pt-2 text-muted text-center text-small">
         <ul class="list-inline">
-            <li class="list-inline-item footer-link"><a href="/pages/privacy-policy.html" class="text-muted">Privacy Policy</a></li>
+            <li class="list-inline-item footer-link"><a href="../pages/privacy-policy.html" class="text-muted">Privacy Policy</a></li>
             <!-- <li class="list-inline-item footer-link "><a href="#" class="text-muted" >Terms and Conditions</a></li> -->
           </ul>
         <p class="pb-3 mb-0">© 2020–2023 IssueLab</p>
