--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-light">
         <div class="container-fluid">
             <a class="navbar-brand" href="index.html">
-                <img src="/images/issuelab-icon.png" alt="" height="32" class="d-inline-block align-text-top">
+                <img src="./images/issuelab-icon.png" alt="" height="32" class="d-inline-block align-text-top">
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
                 aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
