Updated README.md file. Other minor improvements

--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
                             <p class="card-text feature-description">Stay up-to-date on issues that matter to you with
                                 IssueLab's notification system, which alerts you of any changes. You can also view a
                                 list of all issues that you are monitoring by clicking on the dedicated "Monitoring"
-                                button</p>
+                                button.</p>
                         </div>
                     </div>
                 </div>
@@ -377,11 +377,11 @@
 
                 <p id="teamPriceValue" class="d-inline fs-3 text">£225</p>
                 <p id="teamPriceValueText" class="d-inline fw-light fst-italic fs-6 text"> for 2 users per year</p>
-                <p id="priceInfoDetails" class="fw-light text mt-2">Billed at £10 per user/month</p>
+                <p id="priceInfoDetails" class="fw-light text">Billed at £10 per user/month</p>
 
             </div>
 
-            <hr>
+            <hr id="split-line">
 
             <div id="register" class="mt-4">
                 <h2 class="fw-light fst-italic">Try <span class="fw-bold">IssueLab</span> today with your team</h2>
@@ -397,7 +397,7 @@
 
 
             <div class="pb-3 text-center">
-                <h2>Contact Us</h2>
+                <h2 class="feature-text">Contact Us</h2>
             </div>
             <form class="needs-validation" novalidate="">
                 <div class="row g-3">
