--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
             </div>
             <div class="row container mx-auto py-3 px-0">
                 <div class="col-xs-12 col-sm-12 col-md-12 col-lg-4 col-xl-4 mb-3">
-                    <div class="card bg-light text-center shadow-sm">
+                    <div class="additional-info-card card bg-light text-center shadow-sm">
                         <div class="additional-feature-img-container p-2">
                             <img class="additional-feature-img" src="images/issue-recommendation.png"
                                 class="card-img-top" alt="issue recommendation image">
@@ -77,7 +77,7 @@
                     </div>
                 </div>
                 <div class="col-xs-12 col-sm-12 col-md-12 col-lg-4 col-xl-4 mb-3">
-                    <div class="card bg-light text-center shadow-sm">
+                    <div class="additional-info-card card bg-light text-center shadow-sm">
                         <div class="additional-feature-img-container p-2">
                             <img class="additional-feature-img" alt="auto issue tagging"
                                 src="images/auto-issue-tagging.png" class="card-img-top"
@@ -95,7 +95,7 @@
                 </div>
 
                 <div class="col-xs-12 col-sm-12 col-md-12 col-lg-4 col-xl-4 mb-3">
-                    <div class="card bg-light text-center shadow-sm">
+                    <div class="additional-info-card card bg-light text-center shadow-sm">
                         <div class="additional-feature-img-container p-2">
                             <img class="additional-feature-img" alt="issue activity UI image"
                                 src="images/issue-activities.png" class="card-img-top" alt="issue recommendation image">
@@ -129,7 +129,7 @@
             </div>
             <div class="row container mx-auto py-3 px-0">
                 <div class="col-xs-12 col-sm-12 col-md-12 col-lg-4 col-xl-4 mb-3">
-                    <div class="card bg-light text-center shadow-sm">
+                    <div class="additional-info-card card bg-light text-center shadow-sm">
                         <div class="additional-feature-img-container p-2">
                             <img class="additional-feature-img" src="images/monitor-issues.png" class="card-img-top"
                                 alt="issue recommendation image">
@@ -144,7 +144,7 @@
                     </div>
                 </div>
                 <div class="col-xs-12 col-sm-12 col-md-12 col-lg-4 col-xl-4 mb-3">
-                    <div class="card bg-light text-center shadow-sm">
+                    <div class="additional-info-card card bg-light text-center shadow-sm">
                         <div class="additional-feature-img-container p-2">
                             <img class="additional-feature-img" alt="related issue" src="images/related-issues.png"
                                 class="card-img-top" alt="issue recommendation image">
@@ -158,7 +158,7 @@
                     </div>
                 </div>
                 <div class="col-xs-12 col-sm-12 col-md-12 col-lg-4 col-xl-4 mb-3">
-                    <div class="card bg-light text-center shadow-sm">
+                    <div class="additional-info-card card bg-light text-center shadow-sm">
                         <div class="additional-feature-img-container p-2">
                             <img class="additional-feature-img" alt="quick issue" src="images/quick-issue.png"
                                 class="card-img-top" alt="issue recommendation image">
@@ -228,7 +228,7 @@
 
             <div class="row container mx-auto pt-3 px-0">
                 <div class="col-xs-12 col-sm-12 col-md-12 col-lg-4 col-xl-4 mb-3">
-                    <div class="card bg-light text-center shadow-sm">
+                    <div class="additional-info-card card bg-light text-center shadow-sm">
                         <div class="additional-feature-img-container p-2">
                             <img class="additional-feature-img" alt="auto issue tagging"
                                 src="images/auto-issue-tagging.png" class="card-img-top"
@@ -244,7 +244,7 @@
                     </div>
                 </div>
                 <div class="col-xs-12 col-sm-12 col-md-12 col-lg-4 col-xl-4 mb-3">
-                    <div class="card bg-light text-center shadow-sm">
+                    <div class="additional-info-card card bg-light text-center shadow-sm">
                         <div class="additional-feature-img-container p-2">
                             <img class="additional-feature-img" alt="multiselect and groups"
                                 src="images/multiselect-groups.png" class="card-img-top"
@@ -261,7 +261,7 @@
                     </div>
                 </div>
                 <div class="col-xs-12 col-sm-12 col-md-12 col-lg-4 col-xl-4 mb-3">
-                    <div class="card bg-light text-center shadow-sm">
+                    <div class="additional-info-card card bg-light text-center shadow-sm">
                         <div class="additional-feature-img-container p-2">
                             <img class="additional-feature-img" alt="element coloring" src="images/element-coloring.png"
                                 class="card-img-top" alt="issue recommendation image">
@@ -281,7 +281,7 @@
         <div class="evenGridAreaSection ">
             <div class="row container mx-auto py-3 px-0">
                 <div class="col-xs-12 col-sm-12 col-md-12 col-lg-4 col-xl-4 mb-3">
-                    <div class="card bg-light text-center shadow-sm">
+                    <div class="additional-info-card card bg-light text-center shadow-sm">
                         <div class="additional-feature-img-container p-2">
                             <img class="additional-feature-img" alt="element coloring" src="images/element-coloring.png"
                                 class="card-img-top" alt="issue recommendation image">
@@ -297,7 +297,7 @@
                 </div>
 
                 <div class="col-xs-12 col-sm-12 col-md-12 col-lg-4 col-xl-4 mb-3">
-                    <div class="card bg-light text-center shadow-sm">
+                    <div class="additional-info-card card bg-light text-center shadow-sm">
                         <div class="additional-feature-img-container p-2">
                             <img class="additional-feature-img" alt="smart search" src="images/smart-search.png"
                                 class="card-img-top" alt="issue recommendation image">
@@ -313,7 +313,7 @@
                 </div>
 
                 <div class="col-xs-12 col-sm-12 col-md-12 col-lg-4 col-xl-4 mb-3">
-                    <div class="card bg-light text-center shadow-sm">
+                    <div class="additional-info-card card bg-light text-center shadow-sm">
                         <div class="additional-feature-img-container p-2">
                             <img class="additional-feature-img" alt="multiselect-groups"
                                 src="images/multiselect-groups.png" class="card-img-top"
